--- a/casActivities/HarbourHacks/harbourHacks.html
+++ b/casActivities/HarbourHacks/harbourHacks.html
@@ -14,16 +14,14 @@
         src="./gallery.html"
         class="center gallery"
         height="300vh"
-        width="100vh">Loading...</iframe>
+        width="100vw">Loading...</iframe>
     </div>
     <h3>Question: What does it mean for me to be a leader</h3>
     <div class="iframe-container">
       <iframe 
         src="https://docs.google.com/document/d/e/2PACX-1vQEMj74S6qwq0BM6tR53vX7jznCAG6CZLPp34M3ZEKozy1thzRRfcXGPx9mNhoYp4cOWCcgW6ahyft7/pub?embedded=true"
         class="center"
-        height="600vh" 
         frameborder="0" >Loading…</iframe>
     </div>
-    <script type="text/javascript"src="../../modules/gallery/galleryScript.js"></script>
   </body>
 </html>
