--- a/casActivities/HarbourHacks/gallery.html
+++ b/casActivities/HarbourHacks/gallery.html
@@ -16,7 +16,9 @@
         class="gallerySlide" 
         id="img2"
         src="../../photos/harbourHacks/harbourHacks2.jpg" />
-    </div> <br> <div> <a class="prev" onclick="plusSlides(-1)">❮</a>
+    </div> 
+    <br> 
+    <div> <a class="prev" onclick="plusSlides(-1)">❮</a>
       <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
     <div style="text-align:center">
