--- a/casActivities/hfxCodeCircle/gallery.html
+++ b/casActivities/hfxCodeCircle/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../../modules/gallery/galleryStylesheet.css">
     <link rel="stylesheet" href="../../stylesheet.css">
@@ -24,7 +25,6 @@
     <div>
       <a class="prev" onclick="plusSlides(-1)">❮</a>
       <a class="next" onclick="plusSlides(1)">❯</a>
-      <p class="capton">24/11/24</p>
     </div>
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span> 
