--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HalifaxCodeCircle</title>
-    <link rel="stylesheet" href="../../modules/gallery/galleryStylesheet.css">
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
@@ -16,7 +15,8 @@
         src="./gallery.html"
         class="center gallery"
         height="300vh"
-        width="100vh">Loading...</iframe>
+        width="100vw">Loading...</iframe>
     </div>
+    <p class="caption">24/11/24</p>
   </body>
 </html>
