--- a/casActivities/HarbourHacks/harbourHacks.html
+++ b/casActivities/HarbourHacks/harbourHacks.html
@@ -20,7 +20,7 @@
     <div class="iframe-container">
       <iframe 
         src="https://docs.google.com/document/d/e/2PACX-1vQEMj74S6qwq0BM6tR53vX7jznCAG6CZLPp34M3ZEKozy1thzRRfcXGPx9mNhoYp4cOWCcgW6ahyft7/pub?embedded=true"
-        class="center"
+        class="center response"
         frameborder="0" >Loading…</iframe>
     </div>
   </body>
