--- a/casActivities/HarbourHacks/gallery.html
+++ b/casActivities/HarbourHacks/gallery.html
@@ -11,11 +11,11 @@
       <img 
         class="gallerySlide" 
         id="img1"
-        src="./photos/harbourHacks/harbourHacks1.jpg" />
+        src="./photos/harbourHacks1.jpg" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/harbourHacks/harbourHacks2.jpg" />
+        src="./photos/harbourHacks2.jpg" />
     </div> 
     <br> 
     <div> <a class="prev" onclick="plusSlides(-1)">❮</a>
