--- a/casActivities/hfxCodeCircle/gallery2.html
+++ b/casActivities/hfxCodeCircle/gallery2.html
@@ -11,15 +11,11 @@
       <img 
         class="gallerySlide" 
         id="img1"
-        src="./photos/day1/hfxccimg1.png" />
+        src="./photos/day2/hfxCodeCircleday2img1.jpg" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/day1/hfxccimg2.png" />
-      <img 
-        class="gallerySlide" 
-        id="img3"
-        src="./photos/day1/hfxccimg3.png" />
+        src="./photos/day2/hfxCodeCircleday2img2.png" />
     </div>
     <br>
     <div>
@@ -29,7 +25,6 @@
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span> 
       <span class="dot" onclick="currentSlide(2)"></span> 
-      <span class="dot" onclick="currentSlide(3)"></span> 
     </div>
     <script type="text/javascript"src="../../modules/gallery/galleryScript.js"></script>
   </body>
