--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -10,6 +10,7 @@
     <h1>HFX Code Circle</h1>
     <a href="../../index.html" class="center">Back To Homepage</a>
     <!--24/11/24-->
+    <hr>
     <p class="caption">24/11/24</p>
     <div class="iframe-container">
       <iframe 
@@ -20,5 +21,12 @@
     </div>
     <hr>
     <p class="caption">01/12/24</p>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery2.html"
+        class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
   </body>
 </html>
