--- a/casActivities/HarbourHacks/harbourHacks.html
+++ b/casActivities/HarbourHacks/harbourHacks.html
@@ -9,6 +9,13 @@
   <body>
     <h1>HarbourHacks</h1>
     <a href="../../index.html" class="center">Back To Homepage</a>
+    <hr>
+    <div class="listContainer">
+      <ul class="list dashed">
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
     <div class="iframe-container">
       <iframe 
         src="./gallery.html"
