--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -9,9 +9,16 @@
   <body>
     <h1>HFX Code Circle</h1>
     <a href="../../index.html" class="center">Back To Homepage</a>
+    <h2>Index</h2>
+    <div class="listContainer">
+      <ul class="list dashed">
+        <li><a href="#24/11/24">24/11/24</a></li>
+        <li><a href="#01/12/24">01/12/24</a></li>
+      </ul>
+    </div>
     <!--24/11/24-->
     <hr>
-    <p class="caption">24/11/24</p>
+    <p class="caption" id="24/11/24">24/11/24</p>
     <div class="iframe-container">
       <iframe 
         src="./gallery.html"
@@ -19,8 +26,9 @@
         height="300vh"
         width="100vw">Loading...</iframe>
     </div>
+    <!--01/12/24-->
     <hr>
-    <p class="caption">01/12/24</p>
+    <p class="caption" id="01/12/24">01/12/24</p>
     <div class="iframe-container">
       <iframe 
         src="./gallery2.html"
