--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Charles' CAS Playground</h1>
+    <p>Hello, this is a website to chronicle my CAS activities :3</p>
     <h3>Index</h3>
     <div class="listContainer">
       <ul class="list dashed">
