--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Charles' CAS Playground</h1>
     <p>Hello, this is a website to chronicle my CAS activities :3</p>
+    <p>Author: <a href="https://www.instagram.com/charles.lbtr.c/">Charles</a></p>
+    <p></p>
     <h3>Index</h3>
     <div class="listContainer">
       <ul class="list dashed">
