--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -16,6 +16,9 @@
         <li><a href="#01/12/24">01/12/24</a></li>
       </ul>
     </div>
+    <p>Role: Education lead</p>
+    <p> - Teach and mentor </p>
+    <p> - Plan simple curriculums</p>
     <!--24/11/24-->
     <hr>
     <p class="caption" id="24/11/24">24/11/24</p>
@@ -33,6 +36,15 @@
       <iframe 
         src="./gallery2.html"
         class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
+    <!--15/12/24-->
+    <hr>
+    <p class="caption" id="15/12/24">01/12/24</p>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery3.html" class="center gallery"
         height="300vh"
         width="100vw">Loading...</iframe>
     </div>
