--- a/contacts.html
+++ b/contacts.html
@@ -13,6 +13,8 @@
       <ul class="list dashed">
         <li><a href="https://www.instagram.com/charles.lbtr.c/">Personal Instagram</a></li>
         <li><a href="mailto:act865940@gnspes.ca">School Email</a></li>
+        <li><a href="https://github.com/lobre1">Github</a></li>
+
       </ul>
     </div>
     <p><a href="./index.html">Back To Home</a></p>
