--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -12,41 +12,63 @@
     <h2>Index</h2>
     <div class="listContainer">
       <ul class="list dashed">
-        <li><a href="#24/11/24">24/11/24</a></li>
-        <li><a href="#01/12/24">01/12/24</a></li>
+        <li><a href="#Meetings">Attended Meetings</a></li>
       </ul>
     </div>
-    <p>Role: Education lead</p>
-    <p> - Teach and mentor </p>
-    <p> - Plan simple curriculums</p>
-    <!--24/11/24-->
-    <hr>
-    <p class="caption" id="24/11/24">24/11/24</p>
-    <div class="iframe-container">
-      <iframe 
-        src="./gallery.html"
-        class="center gallery"
-        height="300vh"
-        width="100vw">Loading...</iframe>
-    </div>
-    <!--01/12/24-->
-    <hr>
-    <p class="caption" id="01/12/24">01/12/24</p>
-    <div class="iframe-container">
-      <iframe 
-        src="./gallery2.html"
-        class="center gallery"
-        height="300vh"
-        width="100vw">Loading...</iframe>
-    </div>
-    <!--15/12/24-->
-    <hr>
-    <p class="caption" id="15/12/24">01/12/24</p>
-    <div class="iframe-container">
-      <iframe 
-        src="./gallery3.html" class="center gallery"
-        height="300vh"
-        width="100vw">Loading...</iframe>
-    </div>
+    <p>Volunteer Role: Education lead <br> - Teach and mentor <br> - Plan simple curriculums</p>
+
+    <!--Attended Dates-->
+    <details>
+      <summary id="Meetings">Image Galleries of Attended Meetings</summary>
+      <!--List of Attended Dates-->
+      <div class="listContainer">
+        <ul class="list dashed">
+          <li><a href="#24/11/24">24/11/24</a></li>
+          <li><a href="#01/12/24">01/12/24</a></li>
+          <li><a href="#15/12/24">15/12/24</a></li>
+        </ul>
+      </div>
+      <!--24/11/24-->
+      <hr>
+      <p class="caption" id="24/11/24">24/11/24</p>
+      <div class="iframe-container">
+        <iframe 
+          src="./gallery.html"
+          class="center gallery"
+          height="300vh"
+          width="100vw">Loading...</iframe>
+      </div>
+      <!--01/12/24-->
+      <hr>
+      <p class="caption" id="01/12/24">01/12/24</p>
+      <div class="iframe-container">
+        <iframe 
+          src="./gallery2.html"
+          class="center gallery"
+          height="300vh"
+          width="100vw">Loading...</iframe>
+      </div>
+      <!--15/12/24-->
+      <hr>
+      <p class="caption" id="15/12/24">15/12/24</p>
+      <div class="iframe-container">
+        <iframe 
+          src="./gallery3.html" 
+          class="center gallery"
+          height="300vh"
+          width="100vw">Loading...</iframe>
+      </div>
+      <!--05/01/24-->
+      <hr>
+      <p class="caption" id="05/01/24">05/01/24</p>
+      <div class="iframe-container">
+        <iframe 
+          src="./gallery4.html" 
+          class="center gallery"
+          height="300vh"
+          width="100vw">Loading...</iframe>
+      </div>
+    </details>
+  
   </body>
 </html>
