--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="listContainer">
       <ul class="list dashed">
         <li><a href="./casActivities/HarbourHacks/harbourHacks.html">HarbourHacks Hackathon</a> (2024/11/2 - 2024/11/3)</li>
+        <li><a href="./casActivities/csmc/csmc23.html">CSMC 2023 Competition</a> (2024/11/13)</li>
         <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (Every Sunday starting 2024/11/24)</li>
         <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
         <li></li>
