--- a/casActivities/csmc/csmc23.html
+++ b/casActivities/csmc/csmc23.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HarbourHacks CAS</title>
+    <title>CSMC</title>
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
