--- a/casActivities/csmc/csmc23.html
+++ b/casActivities/csmc/csmc23.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-    <h1>HarbourHacks</h1>
+    <h1>CSMC</h1>
     <a href="../../index.html" class="center">Back To Homepage</a>
     <hr>
     <div class="iframe-container">
