--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
     <h3>Index</h3>
     <div class="listContainer">
       <ul class="list dashed">
+        <p>Competitions</p>
         <li><a href="./casActivities/HarbourHacks/harbourHacks.html">HarbourHacks Hackathon</a> (2024/11/2 - 2024/11/3)</li>
         <li><a href="./casActivities/csmc/csmc23.html">CSMC 2023 Competition</a> (2024/11/13)</li>
-        <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (Every Sunday starting 2024/11/24)</li>
+        <li><a href="./casActivities/fermat/fermat.html">Fermat 2025 competition</a> (2025)</li>
+        <p>Volunteering</p>
+        <li><a href="./casActivities/halifaxHelpers/halifaxHelpers.html">Halifax Helpers Tutoring</a> (2025)</li>
+        <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (2024/11/24 - Present)</li>
+        <li><a href="./casActivities/IDMA/IDMA.html">IMDA Prop Manager</a> (2025)</li>
+        <p>Hobbies and interests</p>
+        <li><a href="./casActivities/cubing/cubing.html">Getting back into Cubing</a> (5/2/2025 - Presnet)</li>
         <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
-        <li></li>
+        <li><a href="">Math Instagram Page</a></li>
+        <p>Other unique opportunities</p>
+        <li><a href="">Heart Dissection Lab in Dalhousie</a> (2025)</li>
+        <li><a href="">Brain Scanning at Dalhousie</a> (2025)</li>
         <li></li>
         <li></li>
         <li></li>
