--- a/casActivities/cubing/cubing.html
+++ b/casActivities/cubing/cubing.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cubing</title>
+    <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-
+    <h1>Cubing</h1>
+    <a href="../../index.html" class="center">Back To Homepage</a>
+    <hr>
+    <p>2 Handed 3x3</p>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery.html"
+        class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
+    <p>2 Handed 2x2</p>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery2.html"
+        class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
+    <p>1 Handed 3x3</p>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery3.html"
+        class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
   </body>
 </html>
