--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul class="list dashed">
         <p>Competitions</p>
         <li><a href="./casActivities/HarbourHacks/harbourHacks.html">HarbourHacks Hackathon</a> (2024/11/2 - 2024/11/3)</li>
-        <li><a href="./casActivities/csmc/csmc23.html">CSMC 2023 Competition</a> (2024/11/13)</li>
+        <li><a href="./casActivities/csmc/csmc23.html">CSMC 2024 Competition</a> (2024/11/13)</li>
         <li><a href="./casActivities/fermat/fermat.html">Fermat 2025 competition</a> (2025)</li>
         <p>Volunteering</p>
         <li><a href="./casActivities/halifaxHelpers/halifaxHelpers.html">Halifax Helpers Tutoring</a> (2025)</li>
@@ -25,12 +25,13 @@
         <p>Hobbies and interests</p>
         <li><a href="./casActivities/cubing/cubing.html">Getting back into Cubing</a> (5/2/2025 - Presnet)</li>
         <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
-        <li><a href="">Math Instagram Page</a></li>
         <p>Other unique opportunities</p>
         <li><a href="">Heart Dissection Lab in Dalhousie</a> (2025)</li>
         <li><a href="">Brain Scanning at Dalhousie</a> (2025)</li>
-        <li></li>
-        <li></li>
+        <p>In the making</p>
+        <li><a href="">Math Instagram Page</a></li>
+        <li><a href="">Math Learning Blog Page</a></li>
+        <li><a href=""></a></li>
         <li></li>
       </ul>
     </div>
