--- a/casActivities/fermat/gallery.html
+++ b/casActivities/fermat/gallery.html
@@ -11,15 +11,19 @@
       <img 
         class="gallerySlide" 
         id="img1"
-        src="./photos/tutoring1.jpg" />
+        src="./photos/fermat1.jpg" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/tutoring2.png" />
+        src="./photos/fermat2.jpg" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/tutoring3.png" />
+        src="./photos/fermat3.jpg" />
+      <img 
+        class="gallerySlide" 
+        id="img2"
+        src="./photos/fermat4.jpg" />
     </div> 
     <br> 
     <div> <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -28,6 +32,8 @@
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span> 
       <span class="dot" onclick="currentSlide(2)"></span> 
+      <span class="dot" onclick="currentSlide(3)"></span> 
+      <span class="dot" onclick="currentSlide(4)"></span> 
     </div>
     <script type="text/javascript"src="../../modules/gallery/galleryScript.js"></script>
   </body>
