--- a/casActivities/halifaxHelpers/halifaxHelpers.html
+++ b/casActivities/halifaxHelpers/halifaxHelpers.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Halifax Helpers Tutoring</title>
+    <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-
+    <h1>Halifax Helpers Tutoring</h1>
+    <a href="../../index.html" class="center">Back To Homepage</a>
+    <hr>
+    <div class="iframe-container">
+      <iframe 
+        src="./gallery.html"
+        class="center gallery"
+        height="300vh"
+        width="100vw">Loading...</iframe>
+    </div>
   </body>
 </html>
