--- a/casActivities/brainScanning/gallery.html
+++ b/casActivities/brainScanning/gallery.html
@@ -23,15 +23,15 @@
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/neuro4.jpg" />
+        src="./photos/neuro4.png" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/neuro5.jpg" />
+        src="./photos/neuro5.png" />
       <img 
         class="gallerySlide" 
         id="img2"
-        src="./photos/neuro6.jpg" />
+        src="./photos/neuro6.png" />
     </div> 
     <br> 
     <div> <a class="prev" onclick="plusSlides(-1)">❮</a>
