--- a/casActivities/hobbyProgramming/hobbyProgramming.html
+++ b/casActivities/hobbyProgramming/hobbyProgramming.html
@@ -13,7 +13,7 @@
     <div class="listContainer">
       <ul class="list dashed">
         <li><a href="https://github.com/lobre1/casWebsite">Cas Website(This Website)</a></li>
-        <li><a href=""></a></li>
+        <li><a href="https://lobre.neocities.org/">My Personal Website</a></li>
       </ul>
     </div>
   </body>
