--- a/casActivities/hfxCodeCircle/hfxCodeCircle.html
+++ b/casActivities/hfxCodeCircle/hfxCodeCircle.html
@@ -15,17 +15,18 @@
         <li><a href="#Meetings">Attended Meetings</a></li>
       </ul>
     </div>
-    <p>Volunteer Role: Education lead <br> - Teach and mentor <br> - Plan simple curriculums</p>
+    <p>Volunteer Role: Education lead</p>
 
     <!--Attended Dates-->
     <details>
-      <summary id="Meetings">Image Galleries of Attended Meetings</summary>
+      <summary id="Meetings" style="text-align: center;">Image Galleries of Some Attended Meetings</summary>
       <!--List of Attended Dates-->
       <div class="listContainer">
         <ul class="list dashed">
           <li><a href="#24/11/24">24/11/24</a></li>
           <li><a href="#01/12/24">01/12/24</a></li>
           <li><a href="#15/12/24">15/12/24</a></li>
+          <li><a href="#15/12/24">05/01/24</a></li>
         </ul>
       </div>
       <!--24/11/24-->
