--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <p>Volunteering</p>
         <li><a href="./casActivities/halifaxHelpers/halifaxHelpers.html">Halifax Helpers Tutoring</a> (2025)</li>
         <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (2024/11/24 - Present)</li>
-        <!--Not yet added--><li><a href="./casActivities/IDMA/IDMA.html">IMDA Prop Manager</a> (2025)</li>
+        <li><a href="./casActivities/IMLD/IMLD.html">IMLD Prop Manager</a> (2025)</li>
         <p>Hobbies and interests</p>
         <li><a href="./casActivities/cubing/cubing.html">Getting back into Cubing</a> (5/2/2025 - Presnet)</li>
         <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
         <p>Other unique opportunities</p>
-        <!--Not yet added--><li><a href="">Heart Dissection Lab in Dalhousie</a> (2025)</li>
+        <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
         <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
         <p>In the making</p>
         <!--Not yet added--><li><a href="">Math Instagram Page</a></li>
