--- a/index.html
+++ b/index.html
@@ -7,33 +7,42 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
+    <div class="main"></div>
+<div class="box">
     <h1>Charles' CAS Playground</h1>
     <p>Hello, this is a website to chronicle my CAS activities :3</p>
     <p>Author: <a href="./contacts.html">Charles</a></p>
     <p></p>
     <h3>Index</h3>
-    <div class="listContainer">
-      <ul class="list dashed">
-        <p>Competitions</p>
-        <li><a href="./casActivities/HarbourHacks/harbourHacks.html">HarbourHacks Hackathon</a> (2024/11/2 - 2024/11/3)</li>
-        <li><a href="./casActivities/csmc/csmc23.html">CSMC 2024 Competition</a> (2024/11/13)</li>
-        <li><a href="./casActivities/fermat/fermat.html">Fermat 2025 competition</a> (2025)</li>
-        <p>Volunteering</p>
-        <li><a href="./casActivities/halifaxHelpers/halifaxHelpers.html">Halifax Helpers Tutoring</a> (2025)</li>
-        <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (2024/11/24 - Present)</li>
-        <li><a href="./casActivities/IMLD/IMLD.html">IMLD Prop Manager</a> (2025)</li>
-        <p>Hobbies and interests</p>
-        <li><a href="./casActivities/cubing/cubing.html">Getting back into Cubing</a> (5/2/2025 - Presnet)</li>
-        <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
-        <p>Other unique opportunities</p>
-        <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
-        <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
-        <p>In the making</p>
-        <!--Not yet added--><li><a href="">Math Instagram Page</a></li>
-        <!--Not yet added--><li><a href="">Math Learning Blog Page</a></li>
-        <!--Not yet added--><li><a href="">7 roots 1 Stem</a></li>
-        <li></li>
-      </ul>
-    </div>
+    <p>Competitions</p>
+    <ul class="dashed">
+      <li><a href="./casActivities/HarbourHacks/harbourHacks.html">HarbourHacks Hackathon</a> (2024/11/2 - 2024/11/3)</li>
+      <li><a href="./casActivities/csmc/csmc23.html">CSMC 2024 Competition</a> (2024/11/13)</li>
+      <li><a href="./casActivities/fermat/fermat.html">Fermat 2025 competition</a> (2025)</li>
+    </ul>
+      <p>Volunteering</p>
+    <ul class="dashed">
+      <li><a href="./casActivities/halifaxHelpers/halifaxHelpers.html">Halifax Helpers Tutoring</a> (2025)</li>
+      <li><a href="./casActivities/hfxCodeCircle/hfxCodeCircle.html">HFX Code Circle</a> (2024/11/24 - Present)</li>
+      <li><a href="./casActivities/IMLD/IMLD.html">IMLD Prop Manager</a> (2025)</li>
+    </ul>
+      <p>Hobbies and interests</p>
+    <ul class="dashed">
+      <li><a href="./casActivities/cubing/cubing.html">Getting back into Cubing</a> (5/2/2025 - Presnet)</li>
+      <li><a href="./casActivities/hobbyProgramming/hobbyProgramming.html">Hobby Programming</a> (2024/9 - ?)</li>
+    </ul>
+      <p>Other unique opportunities</p>
+    <ul class="dashed">
+      <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
+      <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
+    </ul>
+      <p>In the making</p>
+    <ul class="dashed">
+      <!--Not yet added--><li><a href="">Math Instagram Page</a></li>
+      <!--Not yet added--><li><a href="">Math Learning Blog Page</a></li>
+      <!--Not yet added--><li><a href="">7 roots 1 Stem</a></li>
+      <li></li>
+    </ul>
+</div>
   </body>
 </html>
