--- a/casActivities/IMLD/IMLD.html
+++ b/casActivities/IMLD/IMLD.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
+    <div class="main"></div>
+<div class="box">
+  <a href="../../index.html" class="center">Back To Homepage</a>
     <h1>IMLD</h1>
-    <a href="../../index.html" class="center">Back To Homepage</a>
-    <hr>
     <p>Role: Prop Manager</p>
     <div class="iframe-container">
       <iframe 
@@ -18,5 +19,6 @@
         height="300vh"
         width="100vw">Loading...</iframe>
     </div>
+</div>
   </body>
 </html>
