--- a/casActivities/halifaxHelpers/halifaxHelpers.html
+++ b/casActivities/halifaxHelpers/halifaxHelpers.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-    <h1>Halifax Helpers Tutoring</h1>
+    <div class="main"></div>
+<div class="box">
     <a href="../../index.html" class="center">Back To Homepage</a>
+    <h1>Halifax Helpers Tutoring</h1>
     <hr>
     <div class="iframe-container">
       <iframe 
@@ -17,5 +19,6 @@
         height="300vh"
         width="100vw">Loading...</iframe>
     </div>
+</div>
   </body>
 </html>
