--- a/casActivities/heartDissection/heartDissection.html
+++ b/casActivities/heartDissection/heartDissection.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-    <h1>Heart Dissection</h1>
+    <div class="main"></div>
+<div class="box">
     <a href="../../index.html" class="center">Back To Homepage</a>
-    <hr>
+    <h1>Heart Dissection</h1>
     <div class="iframe-container">
       <iframe 
         src="./gallery.html"
@@ -17,5 +18,6 @@
         height="300vh"
         width="100vw">Loading...</iframe>
     </div>
+</div>
   </body>
 </html>
