--- a/casActivities/HarbourHacks/harbourHacks.html
+++ b/casActivities/HarbourHacks/harbourHacks.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>HarbourHacks CAS</title>
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
+    <div class="main"></div>
+<div class="box">
+  <a href="../../index.html" class="center">Back To Homepage</a>
     <h1>HarbourHacks</h1>
-    <a href="../../index.html" class="center">Back To Homepage</a>
-    <hr>
     <div class="iframe-container">
       <iframe 
         src="./gallery.html"
@@ -24,5 +25,6 @@
         class="center response"
         frameborder="0" >Loading…</iframe>
     </div>
+</div>
   </body>
 </html>
