--- a/casActivities/hobbyProgramming/hobbyProgramming.html
+++ b/casActivities/hobbyProgramming/hobbyProgramming.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
   <body>
-    <h1>Programming Projects</h1>
+    <div class="main"></div>
+<div class="box">
     <a href="../../index.html" class="center">Back To Homepage</a>
+    <h1>Programming Projects</h1>
     <h2>Index</h2>
     <div class="listContainer">
       <ul class="list dashed">
@@ -16,5 +18,6 @@
         <li><a href="https://lobre.neocities.org/">My Personal Website</a></li>
       </ul>
     </div>
+</div>
   </body>
 </html>
