--- a/casActivities/heartDissection/gallery.html
+++ b/casActivities/heartDissection/gallery.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../modules/gallery/galleryStylesheet.css">
     <link rel="stylesheet" href="../../stylesheet.css">
   </head>
-  <body>
+  <body class="gallerybody">
     <div class="gallery" id="gallery">
       <img 
         class="gallerySlide" 
