--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <ul class="dashed">
       <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
       <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
+      <li><a href="./casActivities/brainScanning/kidsCanCode.html">Kids Can Code Event</a> (2025)</li>
     </ul>
       <p>In the making</p>
     <ul class="dashed">
