--- a/casActivities/kidsCanCode/gallery.html
+++ b/casActivities/kidsCanCode/gallery.html
@@ -31,6 +31,9 @@
     </div>
     <div style="text-align:center">
       <span class="dot" onclick="currentSlide(1)"></span> 
+      <span class="dot" onclick="currentSlide(1)"></span> 
+      <span class="dot" onclick="currentSlide(1)"></span> 
+      <span class="dot" onclick="currentSlide(1)"></span> 
     </div>
     <script type="text/javascript"src="../../modules/gallery/galleryScript.js"></script>
   </body>
