--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </ul>
       <p>Other unique opportunities</p>
     <ul class="dashed">
+      <li><a href="https://www.instagram.com/math.lbtr/">Math Instagram Page</a></li>
       <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
       <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
     </ul>
       <p>In the making</p>
     <ul class="dashed">
-      <!--Not yet added--><li><a href="">Math Instagram Page</a></li>
       <!--Not yet added--><li><a href="">Math Learning Blog Page</a></li>
       <li></li>
     </ul>
