--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </ul>
       <p>Other unique opportunities</p>
     <ul class="dashed">
-      <li><a href="https://www.instagram.com/math.lbtr/">Math Instagram Page</a></li>
+      <li><a href="https://www.instagram.com/math.lbtr/">Math Instagram Page (2025)</a></li>
       <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
       <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
     </ul>
