--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <p>Other unique opportunities</p>
     <ul class="dashed">
       <li><a href="https://www.instagram.com/math.lbtr/">Math Instagram Page (2025)</a></li>
+      <li><a href="https://www.instagram.com/back2theshelf.hfx/">Book Repair Project (2025)</a></li>
       <li><a href="./casActivities/heartDissection/heartDissection.html">Heart Dissection Lab in Dalhousie</a> (2025)</li>
       <li><a href="./casActivities/brainScanning/brainScanning.html">Brain Scanning at Dalhousie</a> (2025)</li>
     </ul>
